--- a/requirements.txt
+++ b/requirements.txt
@@ -22,8 +22,7 @@ passlib==1.7.4
 pluggy==1.6.0
 pyasn1==0.6.1
 pycparser==2.22
-pydantic==2.5.0
-pydantic_core==2.14.1
+pydantic>=2.8.0  
 pytest==7.4.3
 python-dotenv==1.0.0
 python-jose==3.3.0
