--- a/requirements.txt
+++ b/requirements.txt
@@ -1,44 +1,66 @@
-alembic==1.13.0
+aiohappyeyeballs==2.6.1
+aiohttp==3.12.13
+aiosignal==1.3.2
+alembic==1.16.2
 annotated-types==0.7.0
-anyio==3.7.1
+anyio==4.9.0
+attrs==25.3.0
 bcrypt==4.3.0
 certifi==2025.6.15
 cffi==1.17.1
 click==8.2.1
 cryptography==45.0.4
+deprecation==2.1.0
 ecdsa==0.19.1
-fastapi==0.104.1
+fastapi==0.115.13
+frozenlist==1.7.0
+gotrue==2.12.0
 greenlet==3.2.3
 h11==0.16.0
+h2==4.2.0
+hpack==4.1.0
 httpcore==1.0.9
 httptools==0.6.4
-httpx==0.25.2
+httpx==0.28.1
+hyperframe==6.1.0
 idna==3.10
 iniconfig==2.1.0
 Mako==1.3.10
 MarkupSafe==3.0.2
+multidict==6.5.0
 packaging==25.0
 passlib==1.7.4
 pluggy==1.6.0
+postgrest==1.0.2
+propcache==0.3.2
+psycopg2-binary==2.9.10
 pyasn1==0.6.1
 pycparser==2.22
-pydantic>=2.8.0  
-pytest==7.4.3
-python-dotenv==1.0.0
-python-jose==3.3.0
-python-multipart==0.0.6
+pydantic==2.11.7
+pydantic_core==2.33.2
+Pygments==2.19.2
+PyJWT==2.10.1
+pytest==8.4.1
+pytest-mock==3.14.1
+python-dateutil==2.9.0.post0
+python-dotenv==1.1.0
+python-jose==3.5.0
+python-multipart==0.0.20
 PyYAML==6.0.2
+realtime==2.4.3
 rsa==4.9.1
 six==1.17.0
 sniffio==1.3.1
-SQLAlchemy==2.0.23
-starlette==0.27.0
+SQLAlchemy==2.0.41
+starlette==0.46.2
+storage3==0.11.3
+StrEnum==0.4.15
+supabase==2.15.3
+supafunc==0.9.4
+typing-inspection==0.4.1
 typing_extensions==4.14.0
-uvicorn==0.24.0
+uvicorn==0.34.3
 uvloop==0.21.0
 watchfiles==1.1.0
-websockets==15.0.1
-schedule==1.2.0
-APScheduler==3.10.4
-supabase==2.0.0
-asyncpg==0.29.0
+websockets==14.2
+yarl==1.20.1
