--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ attrs==25.3.0
 bcrypt==4.3.0
 certifi==2025.6.15
 cffi==1.17.1
+charset-normalizer==3.4.2
 click==8.2.1
 cryptography==45.0.4
 deprecation==2.1.0
@@ -48,6 +49,7 @@ python-jose==3.5.0
 python-multipart==0.0.20
 PyYAML==6.0.2
 realtime==2.4.3
+requests==2.32.4
 rsa==4.9.1
 six==1.17.0
 sniffio==1.3.1
@@ -59,6 +61,7 @@ supabase==2.15.3
 supafunc==0.9.4
 typing-inspection==0.4.1
 typing_extensions==4.14.0
+urllib3==2.5.0
 uvicorn==0.34.3
 uvloop==0.21.0
 watchfiles==1.1.0
