--- a/requirements.txt
+++ b/requirements.txt
@@ -49,8 +49,8 @@ python-jose==3.5.0
 python-multipart==0.0.20
 PyYAML==6.0.2
 realtime==2.4.3
-requests==2.32.4
 rsa==4.9.1
+
 six==1.17.0
 sniffio==1.3.1
 SQLAlchemy==2.0.41
@@ -67,3 +67,8 @@ uvloop==0.21.0
 watchfiles==1.1.0
 websockets==14.2
 yarl==1.20.1
+
+requests==2.32.4
+schedule==1.2.2
+asyncpg==0.30.0
+pydantic[email]
